# Gridman

./: AI适配引导.md  LICENSE  README.md  SKILL.md
gridman-app/: .gitignore  AI安装引导.md  MANIFEST.in  README.md  pyproject.toml
gridman-app/gridman_mcp/: server.py
gridman-app/gridman_mcp/tools/_shared/: _audit_marks.py  paths.py
gridman-app/gridman_mcp/tools/audit/: aging_analysis.py  analytical_procedures.py  audit_adjustment.py  bank_reconciliation.py  benford_law.py  confirmation_letter.py  depreciation_check.py  voucher_scan.py  workpaper_init.py
gridman-app/gridman_mcp/tools/data/: __init__.py  balance_sheet_processor.py  data_analyst.py  fuzzy_match.py
gridman-app/gridman_mcp/tools/document/: document_ocr.py  pdf_tools.py  voucher_split.py
gridman-app/gridman_mcp/tools/finance/: __init__.py  cashflow_direct.py  cashflow_test.py  non_recurring_items.py  tax_adjustment.py
gridman-app/gridman_mcp/tools/market/: report_download.py  stock_data.py
gridman-app（公开版）/: AI安装引导.md  README.md  pyproject.toml
gridman-app（公开版）/gridman_mcp/: __init__.py  server.py
gridman-app（公开版）/gridman_mcp/tools/: __init__.py
gridman-app（公开版）/gridman_mcp/tools/_shared/: __init__.py  io.py  styles.py
gridman-app（公开版）/gridman_mcp/tools/audit/: __init__.py  audit_sampling.py  bank_reconciliation.py  confirmation_letter.py  cutoff_test.py  materiality_calculator.py  reclassification.py  workpaper_init.py
gridman-app（公开版）/gridman_mcp/tools/data/: address_split.py  chart_generator.py
gridman-app（公开版）/gridman_mcp/tools/document/: __init__.py  document_ocr.py
gridman-app（公开版）/gridman_mcp/tools/finance/: financial_ratios.py
gridman-app（公开版）/gridman_mcp/tools/market/: __init__.py  market_quote.py  stock_data.py
gridman-app（公开版）/gridman_mcp/tools/office/: _engine.py  office_control.py
gridman-skill/: AI适配引导.md  INSTALL.md  README.md  SKILL.md  使用说明.txt
gridman-skill/payload/: gridman_mcp-1.8.8-py3-none-any.whl  gridman_mcp-1.9.0-py3-none-any.whl
gridman-skill/references/: accounting_advanced.md  accounting_core.md  audit_if_lines.md  audit_procedures.md  business_patterns.md  cas_application_cases.md  cas_practical_judgments.md  consulting.md  economic_law.md  empirical_research.md  equity_research.md  esg.md  finance.md  financial_bp.md  financial_fraud.md  forensic_accounting.md  governance_logic.md  government_npo_accounting.md  industry_accounting.md  internal_audit.md  internal_control.md  investment.md  invoice_templates.md  management_accounting.md  mpacc_case_template.md  penalty_cases.md  political_economy.md  questioning_framework.md  regulatory_risk_alerts.md  shared_services_rpa.md  songs.md  statement.md  tax_advanced.md  tax_core.md  tax_risk_indicators.md  workflows.md
gridman-skill（公开版）/: AI适配引导.md  INSTALL.md  LICENSE  README.md  SKILL.md  使用说明.txt
gridman-skill（公开版）/payload/: gridman_mcp-2.0.0-py3-none-any.whl
gridman-skill（公开版）/references/extra/: consulting.md  governance_logic.md  questioning_framework.md
references/: accounting_advanced.md  accounting_core.md  audit.md  audit_procedures.md  business_patterns.md  cas_application_cases.md  cas_practical_judgments.md  consulting.md  economic_law.md  empirical_research.md  equity_research.md  esg.md  finance.md  financial_bp.md  financial_fraud.md  forensic_accounting.md  governance_logic.md  government_npo_accounting.md  internal_audit.md  internal_control.md  investment.md  invoice_templates.md  management_accounting.md  mpacc_case_template.md  penalty_cases.md  political_economy.md  regulatory_risk_alerts.md  shared_services_rpa.md  songs.md  statement.md  tax_advanced.md  tax_core.md  tax_risk_indicators.md  workflows.md
(+50 files in other folders)
